--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-redux": "7.2.1",
+    "react-router-dom": "5.2.0",
     "redux": "4.0.5",
     "styled-components": "5.2.0"
   },
@@ -36,6 +37,7 @@
     "html-webpack-plugin": "4.5.0",
     "mini-css-extract-plugin": "0.11.2",
     "optimize-css-assets-webpack-plugin": "5.0.4",
+    "prettier": "2.1.2",
     "style-loader": "1.2.1",
     "terser-webpack-plugin": "4.2.2",
     "url-loader": "4.1.0",
