--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
   },
   "homepage": "https://github.com/alvlinarez/wasap#readme",
   "dependencies": {
+    "compression": "1.7.4",
+    "express": "4.17.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-redux": "7.2.1",
     "redux": "4.0.5",
     "short-uuid": "4.1.0",
-    "styled-components": "5.2.0"
+    "styled-components": "5.2.0",
+    "unique-names-generator": "4.3.1"
   },
   "devDependencies": {
     "@babel/core": "7.11.6",
